[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/ArenaController.gd" type="Script" id=1]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/ui/cardboard_button_small.png" type="Texture" id=3]
[ext_resource path="res://src/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ArenaBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/bg/floor_extended.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/bg/bg_front.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/raw/Mat Saleh.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/sprites/entropy/entropy_event0_frame0.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/entropy/entropy_event0_frame1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/entropy/entropy_event1_frame0.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/entropy/entropy_event1_frame1.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/entropy/entropy_event2_frame0.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/entropy/entropy_event2_frame1.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/entropy/entropy_event3_frame1.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/entropy/entropy_event3_frame0.png" type="Texture" id=16]
[ext_resource path="res://assets/white_square.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/ui/cardboard_button_small_hover.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/ui/cardboard_button_small_pressed.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "event3",
"speed": 2.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "event2",
"speed": 2.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "event1",
"speed": 2.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "event0",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 100
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 30
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 120
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[node name="ArenaController" type="Node2D" groups=[
"ArenaController",
]]
script = ExtResource( 1 )

[node name="ArenaBackground" parent="." instance=ExtResource( 5 )]
scroll_ignore_camera_zoom = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -153.04, -5.59865 )

[node name="Enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 1135.01, 251.233 )

[node name="Tween" type="Tween" parent="."]

[node name="bg_floor" type="Sprite" parent="."]
position = Vector2( 755.557, 687.663 )
z_index = -2
texture = ExtResource( 6 )

[node name="TurnStepTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 0
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -130.813, -28.541 )
motion_mirroring = Vector2( 2300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -716.873, 179.567 )
texture = ExtResource( 7 )
centered = false

[node name="EntropyEventContainer" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="EntropyEventContainer"]
position = Vector2( 629.211, 494.382 )
frames = SubResource( 1 )
animation = "event2"
playing = true

[node name="Label" type="Label" parent="EntropyEventContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -338.19
margin_top = -111.118
margin_right = 1620.81
margin_bottom = -20.1182
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "entropy"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="." groups=[
"Cam",
]]
position = Vector2( 871.514, 427.646 )
current = true
zoom = Vector2( 1.25, 1.25 )

[node name="TextureButton" type="TextureButton" parent="Camera2D" groups=[
"PlayerTurnActiveOnly",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 550.781
margin_top = 57.1484
margin_right = 773.781
margin_bottom = 136.148
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/TextureButton"]
margin_left = 12.7136
margin_top = 20.1298
margin_right = 207.714
margin_bottom = 48.1298
custom_fonts/font = SubResource( 3 )
text = "END TURN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillCountLabel" type="Label" parent="Camera2D"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -26.0
margin_top = -400.0
margin_right = 26.0
margin_bottom = -372.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ent"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseContainer" type="Control" parent="Camera2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Camera2D/PauseContainer"]
self_modulate = Color( 0.0705882, 0.0666667, 0.0666667, 0.513726 )
margin_left = -2127.7
margin_top = -1174.78
margin_right = -2087.7
margin_bottom = -1134.78
rect_scale = Vector2( 8000, 3000 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/PauseContainer"]
margin_left = -247.474
margin_top = -410.205
margin_right = 151.526
margin_bottom = -300.205
custom_fonts/font = SubResource( 5 )
text = "PAUSED"

[node name="BackButton" type="TextureButton" parent="Camera2D/PauseContainer"]
margin_left = -186.676
margin_top = -67.8823
margin_right = 36.3239
margin_bottom = 11.1177
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/PauseContainer/BackButton"]
margin_left = 12.7136
margin_top = 20.1298
margin_right = 207.714
margin_bottom = 48.1298
custom_fonts/font = SubResource( 3 )
text = "BACK TO GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="TextureButton" parent="Camera2D/PauseContainer"]
margin_left = 87.6813
margin_top = -65.0538
margin_right = 310.681
margin_bottom = 13.9462
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="Label" type="Label" parent="Camera2D/PauseContainer/MainMenuButton"]
margin_left = 12.7136
margin_top = 20.1298
margin_right = 207.714
margin_bottom = 48.1298
custom_fonts/font = SubResource( 3 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="Camera2D/PauseContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -174.815
margin_top = 78.9736
margin_right = 210.185
margin_bottom = 94.9736
min_value = -80.0
max_value = 15.0
value = -10.0
rounded = true
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/PauseContainer/VolumeSlider"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5002
margin_top = 20.7058
margin_right = 97.5002
margin_bottom = 48.7058
custom_fonts/font = SubResource( 6 )
text = "VOLUME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverContainer" type="Control" parent="Camera2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Camera2D/GameOverContainer"]
self_modulate = Color( 0.0705882, 0.0666667, 0.0666667, 0.513726 )
margin_left = -2074.21
margin_top = -1238.23
margin_right = -2034.21
margin_bottom = -1198.23
rect_scale = Vector2( 8000, 3000 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/GameOverContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.5
margin_top = -383.139
margin_right = 338.5
margin_bottom = -159.139
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="Camera2D/GameOverContainer/VBoxContainer"]
margin_right = 677.0
margin_bottom = 110.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "GAME OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillCount" type="Label" parent="Camera2D/GameOverContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 677.0
margin_bottom = 224.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "KILL COUNT: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/GameOverContainer"]
margin_left = -191.943
margin_right = 323.057
margin_bottom = 79.0
grow_horizontal = 2
custom_constants/separation = 69
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="TextureButton" parent="Camera2D/GameOverContainer/HBoxContainer"]
margin_right = 223.0
margin_bottom = 79.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/GameOverContainer/HBoxContainer/MainMenuButton"]
margin_left = 12.7136
margin_top = 20.1298
margin_right = 207.714
margin_bottom = 48.1298
custom_fonts/font = SubResource( 3 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TextureButton" parent="Camera2D/GameOverContainer/HBoxContainer"]
margin_left = 292.0
margin_right = 515.0
margin_bottom = 79.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="Label" type="Label" parent="Camera2D/GameOverContainer/HBoxContainer/RestartButton"]
margin_left = 12.7136
margin_top = 20.1298
margin_right = 207.714
margin_bottom = 48.1298
custom_fonts/font = SubResource( 3 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventStepTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Camera2D/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="button_down" from="Camera2D/PauseContainer/BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="pressed" from="Camera2D/PauseContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_down" from="Camera2D/PauseContainer/MainMenuButton" to="." method="_on_MainMenuButton_button_down"]
[connection signal="pressed" from="Camera2D/PauseContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="value_changed" from="Camera2D/PauseContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="button_down" from="Camera2D/GameOverContainer/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_button_down"]
[connection signal="pressed" from="Camera2D/GameOverContainer/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="button_down" from="Camera2D/GameOverContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_button_down"]
[connection signal="pressed" from="Camera2D/GameOverContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
